--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-162.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇫🇷 法国-1.60MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇯🇵 日本-4.74MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-325.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: 770c9e92-f51b-3e52-b932-eba13fb56801, sni: s162.s2022.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-273.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇯🇵 日本-498.7KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-315.1KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇻🇳 越南-8.06MB/s(Youtube:不良林), server: 103.74.105.118, port: 80, type: vmess, uuid: 23734aa1-5de0-465f-9662-4f0239b31d9f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.74.105.118}}
-  - {name: 🇷🇺 俄罗斯联邦-341.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
+  - {name: 🇯🇵 日本-1.39MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: 770c9e92-f51b-3e52-b932-eba13fb56801, sni: s162.s2022.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-254.3KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-291.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-162.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-325.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-498.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-315.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-341.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-254.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-291.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-162.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-325.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-498.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-315.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-341.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-254.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-291.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-162.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-325.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-498.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-315.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-341.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-254.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-291.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-162.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-325.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-498.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-315.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-341.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-254.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-291.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-162.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-325.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-498.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-315.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-341.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-254.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-291.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-162.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-325.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-498.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-315.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-341.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-254.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-291.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-162.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-325.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-273.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-498.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-315.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-8.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-341.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-254.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-291.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
