--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.39MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: 770c9e92-f51b-3e52-b932-eba13fb56801, sni: s162.s2022.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-254.3KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-291.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
+  - {name: 🇷🇺 俄罗斯联邦-253.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇷🇺 俄罗斯联邦-907.1KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-544.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-254.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-291.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-253.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-254.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-291.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-253.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-254.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-291.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-253.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-254.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-291.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-253.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-254.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-291.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-253.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-254.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-291.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-253.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-254.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-291.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-253.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-544.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
