--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇫🇷 法国-461.4KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇺🇸 美国-213.0KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇭🇰 香港-668.9KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-255.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇷🇺 俄罗斯联邦-207.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-461.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-668.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-207.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-461.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-668.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-207.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-461.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-668.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-207.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -53,32 +53,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-461.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-668.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-207.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-461.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-668.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-207.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-461.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-668.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-207.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-461.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-668.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-207.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
