--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,9 +5,7 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-461.4KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-213.0KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-668.9KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-163.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
   - {name: 🇷🇺 俄罗斯联邦-255.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
   - {name: 🇷🇺 俄罗斯联邦-207.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
 proxy-groups:
@@ -16,9 +14,7 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-461.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-668.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-163.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-255.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-207.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -26,9 +22,7 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-461.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-668.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-163.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-255.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-207.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -37,25 +31,20 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-461.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-668.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-163.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-255.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-207.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-668.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-461.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-668.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-163.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-255.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-207.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -63,9 +52,7 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-461.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-668.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-163.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-255.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-207.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -74,9 +61,7 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-461.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-668.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-163.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-255.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-207.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -94,9 +79,7 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-461.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-213.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-668.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-163.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-255.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-207.5KB/s(Youtube:不良林)
 rules:
