--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,65 +5,81 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-266.8KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-251.8KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇬🇧 英国-267.2KB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 乌克兰-389.3KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇨🇳 台湾-2.51MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇭🇰 香港-1.87MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-1.87MB/s(Youtube:不良林), server: cm01.db-link.in, port: 13302, type: vmess, uuid: c4fa06ca-c18f-37a4-ba0e-63537c0fb672, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /db, ws-headers: {Host: cm01.db-link.in}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-266.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-267.2KB/s(Youtube:不良林)
+      - 乌克兰-389.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-266.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-267.2KB/s(Youtube:不良林)
+      - 乌克兰-389.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-266.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-267.2KB/s(Youtube:不良林)
+      - 乌克兰-389.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-266.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-267.2KB/s(Youtube:不良林)
+      - 乌克兰-389.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-266.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-267.2KB/s(Youtube:不良林)
+      - 乌克兰-389.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-266.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-267.2KB/s(Youtube:不良林)
+      - 乌克兰-389.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -79,9 +95,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-266.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-267.2KB/s(Youtube:不良林)
+      - 乌克兰-389.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-567.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
