--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-354.5KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林), server: 213.183.53.177, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
   - {name: 🇺🇸 美国-509.6KB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
   - {name: 乌克兰-552.2KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
   - {name: 🇨🇳 台湾-1.24MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-654.3KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.6KB/s(Youtube:不良林)
       - 乌克兰-552.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-654.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.6KB/s(Youtube:不良林)
       - 乌克兰-552.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-654.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.6KB/s(Youtube:不良林)
       - 乌克兰-552.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-654.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -53,32 +53,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.6KB/s(Youtube:不良林)
       - 乌克兰-552.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-654.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.6KB/s(Youtube:不良林)
       - 乌克兰-552.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-654.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.6KB/s(Youtube:不良林)
       - 乌克兰-552.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-654.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-354.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.6KB/s(Youtube:不良林)
       - 乌克兰-552.2KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-654.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
